<resources>
    <string name="app_name">Mingler App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="account_name_text">account name</string>
    <string name="time_placeholder_text">00:00 AM</string>
    <string name="last_message_placeholder_text">when next will you be coming to town you clown so that i can treat your func up</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_password_input_your_registered_email_text">Input your registered email to reset your password and proceed to login</string>
    <string name="email_text">Email</string>
    <string name="reset_password_text">Reset password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="first_name_text">First name</string>
    <string name="last_name_text">Last name</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="sign_up_text">Sign Up</string>
</resources>