<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/user_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/account_name_text"
        android:textSize="@dimen/textSize_15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_message_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_placeholder_text"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:fontFamily="@font/noto_sans"
        android:textSize="@dimen/textSize_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_name_textview"/>

    <TextView
        android:id="@+id/last_message_textView"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/last_message_placeholder_text"
        android:textSize="@dimen/textSize_14sp"
        android:layout_marginTop="@dimen/margin_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/last_message_time_textView"
        app:layout_constraintTop_toBottomOf="@+id/user_name_textview"
        app:layout_constraintStart_toStartOf="@+id/user_name_textview"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>