<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ForgotPasswordFragment">

    <TextView
        android:id="@+id/forgot_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_19dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/forgot_password_text"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/textSize_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password_fragment_text_body_textview"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:text="@string/forgot_password_input_your_registered_email_text"
        android:textColor="@color/text_color_black"
        android:textFontWeight="400"
        android:textSize="@dimen/textSize_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/forgot_password_textView"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_password_email_text_input_layout"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_70dp"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password_fragment_text_body_textview"
        app:layout_constraintStart_toStartOf="@+id/forgot_password_fragment_text_body_textview"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_fragment_text_body_textview">

        <EditText
            android:id="@+id/forgot_password_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_text" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgot_password_reset_password_button"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_text"
        android:padding="@dimen/padding_12dp"
        android:backgroundTint="@color/steel_blue"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password_email_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/forgot_password_email_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_email_text_input_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>